--- a/infrastructure/deployment.yml
+++ b/infrastructure/deployment.yml
@@ -1,3 +1,21 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: cloudiscoming-service
+  labels:
+    app: cloudiscoming-app
+spec:
+  type: LoadBalancer
+  selector:
+    app: cloudiscoming-app
+  ports:
+    - protocol: TCP
+      name: http
+      port: 8081      
+      targetPort: 80
+
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
